---
title: 01. 공통 · 인증 및 사용자 관리 (com.expo.common, com.expo.member, com.expo.auth)
---
erDiagram

FILE_METADATA {
    bigint id PK
    bigint uploader_user_id FK "NULL 허용"
    varchar storage_provider
    varchar bucket_name
    varchar storage_key UK
    varchar original_filename
    varchar content_type
    bigint file_size
    varchar checksum
    varchar file_status "ACTIVE/DELETED/QUARANTINED"
    varchar access_level "PUBLIC/PRIVATE, V202608201437 추가"
    timestamptz created_at
    timestamptz updated_at
}

USERS {
    bigint id PK
    varchar email UK
    varchar password_hash "NULL=소셜 로그인 전용"
    varchar nickname UK
    varchar role "MEMBER/CLIENT/ADMIN"
    varchar account_status "ACTIVE/WITHDRAWN"
    varchar phone_number
    timestamptz phone_verified_at
    timestamptz last_login_at
    timestamptz withdrawn_at
    bigint profile_image_file_id FK
    timestamptz profile_image_updated_at
    timestamptz created_at
    timestamptz updated_at
}

CLIENT_PROFILES {
    bigint user_id PK "FK, = users.id"
    varchar business_number UK
    varchar company_name
    varchar representative_name
    varchar business_address
    varchar business_type
    boolean business_number_verified
    timestamptz business_verified_at
    varchar verification_provider
    timestamptz created_at
    timestamptz updated_at
}

SOCIAL_ACCOUNTS {
    bigint id PK
    bigint user_id FK
    varchar provider "GOOGLE/KAKAO"
    varchar provider_user_id "UK with provider"
    varchar provider_email
    timestamptz linked_at
    timestamptz last_login_at
}

PHONE_VERIFICATIONS {
    bigint id PK
    bigint user_id FK "NULL 허용"
    varchar phone_number
    varchar verification_token_hash
    varchar status "REQUESTED/VERIFIED/FAILED/EXPIRED/USED"
    timestamptz requested_at
    timestamptz verified_at
    timestamptz expires_at
    varchar signup_token_hash "V202608250916 추가"
    timestamptz signup_token_expires_at "V202608250916 추가"
    bigint version "V202608250916 추가, 낙관적 락"
}

PASSWORD_RESET_TOKENS {
    bigint id PK
    bigint user_id FK
    varchar token_hash UK
    varchar status "ISSUED/USED/EXPIRED/REVOKED"
    timestamptz issued_at
    timestamptz expires_at
    timestamptz used_at
    varchar requested_ip
    timestamptz created_at
}

REFRESH_TOKENS {
    bigint id PK
    bigint user_id FK
    varchar token_hash UK
    timestamptz expires_at
    timestamptz revoked_at
    timestamptz last_used_at
    varchar created_ip
    varchar user_agent
    timestamptz created_at
    timestamptz updated_at
}

EMAIL_VERIFICATIONS {
    bigint id PK
    bigint user_id "NULL 허용, FK 제약 없음 (V202608211800)"
    varchar email
    varchar verification_code_hash
    varchar signup_token_hash
    varchar status "REQUESTED/VERIFIED/FAILED/EXPIRED/USED"
    timestamptz requested_at
    timestamptz verified_at
    timestamptz expires_at
    timestamptz signup_token_expires_at
    bigint version "낙관적 락"
}

USERS ||--o| CLIENT_PROFILES : "user_id (PK=FK)"
USERS ||--o{ SOCIAL_ACCOUNTS : "user_id"
USERS ||--o{ PHONE_VERIFICATIONS : "user_id"
USERS ||--o{ PASSWORD_RESET_TOKENS : "user_id"
USERS ||--o{ REFRESH_TOKENS : "user_id"
USERS ||--o{ FILE_METADATA : "uploader_user_id"
FILE_METADATA ||--o{ USERS : "profile_image_file_id"
